src/objects/Risk_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Aging__c</fullName>
        <inlineHelpText>60 Days</inlineHelpText>
        <label>Aging</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_unauthorized_access_attempts__c</fullName>
        <inlineHelpText>All unauthorized access attempts, such as:
1) failed or rejected user actions;
2) failed or rejected actions involving data and other resources</inlineHelpText>
        <label>All unauthorized access attempts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Security__c</fullName>
        <inlineHelpText>Applications and programming interfaces shall be designed, developed, deployed, and tested in accordance with leading industry standards (e.g., OWASP for web applications) and adhere to applicable legal, statutory, or regulatory compliance obligations.</inlineHelpText>
        <label>Application Security</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automatic_Scan__c</fullName>
        <label>Automatic Scan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Automatic_Update__c</fullName>
        <label>Automatic Update</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <picklistValues>
                <fullName>Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entity-wide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_Level_Two__c</fullName>
        <label>Operational Risk Sub-category</label>
        <picklist>
            <picklistValues>
                <fullName>Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Practices and workplace safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clients, products and business practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution, delivery &amp; process management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Strategic risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment &amp; ALM risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_upon_initial_logon__c</fullName>
        <label>Change upon initial logon</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cloud_Service__c</fullName>
        <inlineHelpText>Is it hosting in External Cloud Service? E.g. Amazon</inlineHelpText>
        <label>Cloud Service</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compliance_Risk_Sub_category__c</fullName>
        <label>Compliance Risk Sub-category</label>
        <picklist>
            <picklistValues>
                <fullName>Regulatory Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Crime Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Sub_category__c</fullName>
        <label>Credit Risk Sub-category</label>
        <picklist>
            <picklistValues>
                <fullName>Obligor Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counterparty Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issuer Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concentration Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Centre_Location__c</fullName>
        <label>Data Centre Location</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Centre_Security_Certification__c</fullName>
        <inlineHelpText>i.e. ISO27001,TRUSTe® Privacy, SAS70 Type II
Please provide the soft copies</inlineHelpText>
        <label>Data Centre Security Certification</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Collection__c</fullName>
        <label>Data Collection</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Storage__c</fullName>
        <inlineHelpText>Please state the Encryption Methodologies</inlineHelpText>
        <label>Data Storage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Transmission__c</fullName>
        <label>Data Transmission</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Database_Instance__c</fullName>
        <label>Database Instance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Datacenter_Security_Unauthorized_Persons__c</fullName>
        <inlineHelpText>Ingress and egress points where unauthorized personnel may enter the premises shall be monitored, controlled and, if possible, isolated from data storage and processing facilities to prevent unauthorized data corruption, compromise, and loss.</inlineHelpText>
        <label>Unauthorized Persons Entry</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_since_Created__c</fullName>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Envirnoment__c</fullName>
        <inlineHelpText>Physical/Vitrual Machine</inlineHelpText>
        <label>Envirnoment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Logging__c</fullName>
        <label>Event Logging</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Exposure__c</fullName>
        <label>Expected Exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiduciary_Risk_Sub_category__c</fullName>
        <label>Fiduciary Risk Sub-category</label>
        <picklist>
            <picklistValues>
                <fullName>Discretionary Decision Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory and Compliance Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conflicts of Interest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Firewall__c</fullName>
        <label>Firewall</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impact_Number__c</fullName>
        <formula>Case( Impact__c , &apos;5&apos;,5,&apos;4&apos;,4,&apos;3&apos;,3,&apos;2&apos;,2,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Impact Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inherent_Risk_Level__c</fullName>
        <formula>Impact_Number__c * Likelihood_Number__c /5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inherent Risk Level</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood_Number__c</fullName>
        <formula>CASE( Likelihood__c ,&apos;5&apos;,5,&apos;4&apos;,4,&apos;3&apos;,3,&apos;2&apos;,2,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Likelihood Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood__c</fullName>
        <label>Likelihood</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_percent__c</fullName>
        <label>Likelihood</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lock_out__c</fullName>
        <inlineHelpText>Lock out</inlineHelpText>
        <label>Lock out</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Liquidity_Risk_Sub_category__c</fullName>
        <label>Market &amp; Liquidity Risk Sub-category</label>
        <picklist>
            <picklistValues>
                <fullName>Trading Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interest Rate Risk in the Banking Book (IRRBB)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquidity Funding Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minimum_length__c</fullName>
        <inlineHelpText>min. 8 char</inlineHelpText>
        <label>Minimum length</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Minutes__c</fullName>
        <label>Minutes</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Most_Likely_Financial_Impact__c</fullName>
        <label>Most Likely Financial Impact</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operation_System_Version__c</fullName>
        <label>Operation System Version</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Management__c</fullName>
        <label>Patch Management</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Personal_Data__c</fullName>
        <inlineHelpText>Will store any personal data in the database? Please state</inlineHelpText>
        <label>Personal Data</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_No_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuaterlyReviewStatusFWD?id=&apos;&amp;Id+&apos;&amp;status=Reviewed but no changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJK&apos;,&apos;Reviewed but no changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Review No Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Status_Track__c</fullName>
        <label>Quarterly Review Status Track</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_Status__c</fullName>
        <label>Quarterly Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Reviewed but no changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed with changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Quarterly_Review_With_Changes__c</fullName>
        <formula>HYPERLINK(&apos;/apex/UpdateQuaterlyReviewStatusFWD?id=&apos;&amp;Id+&apos;&amp;status=Reviewed with changes&apos; , IMAGE(&apos;/servlet/servlet.FileDownload?file=015F0000004boJJ&apos;,&apos;Reviewed with changes&apos;),&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarterly Review With Changes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <inlineHelpText>Do you have a documented security incident response plan?
Please provide the document if possible</inlineHelpText>
        <label>Question 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <inlineHelpText>Do you integrate customized tenant requirements into your security incident response plans?</inlineHelpText>
        <label>Question 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <inlineHelpText>Do you publish a roles and responsibilities document specifying what you vs. your tenants are responsible for during security incidents?
Please provide the document if possible</inlineHelpText>
        <label>Question 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RTO_RPO__c</fullName>
        <description>Recovery Time Objective/Recovery Point Object</description>
        <label>RTO / RPO</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Re_use__c</fullName>
        <inlineHelpText>6 Times</inlineHelpText>
        <label>Re-use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reporting__c</fullName>
        <label>Reporting</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_ID__c</fullName>
        <displayFormat>R-{000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Risk_Owner__c</fullName>
        <label>Risk Owner</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Status__c</fullName>
        <label>Risk Status</label>
        <picklist>
            <picklistValues>
                <fullName>Key risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watchlist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Risk_Trend_Indicator__c</fullName>
        <formula>IMAGE(CASE( TEXT( Risk_Trend__c ) , 
&apos;3 - Increasing&apos;,&quot;/servlet/servlet.ImageServer?id=015M0000000uAE1&amp;oid=00DM0000001eG4f&amp;lastMod=1445460626000&quot;, 
&apos;2 - About the same&apos;,&quot;/servlet/servlet.ImageServer?id=015M0000000uAEB&amp;oid=00DM0000001eG4f&amp;lastMod=1445460941000&quot;, 
&apos;1 - Decreasing&apos;,&quot;servlet/servlet.ImageServer?id=015M0000000uAE6&amp;oid=00DM0000001eG4f&amp;lastMod=1445460658000&quot;, 

&quot;/s.gif&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Trend Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Trend__c</fullName>
        <label>Risk Trend</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Decreasing</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>2 - About the same</fullName>
                <color>#FFFF66</color>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Increasing</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role_Based__c</fullName>
        <label>Role Based</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Vulnerability_Scanning_Report__c</fullName>
        <inlineHelpText>Security vulnerability testing tool for web applications and source code</inlineHelpText>
        <label>Security Vulnerability Scanning Report</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Risk_Sub_category__c</fullName>
        <label>Strategic Risk Sub-category</label>
        <picklist>
            <picklistValues>
                <fullName>Business Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Risk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_category__c</fullName>
        <label>Sub-category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Internal Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Practices and Workplace Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clients, Products and Business Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage to Physical Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Disruption and System Failures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution, Delivery &amp; Process Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy/Business Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reputation Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tail_Exposure__c</fullName>
        <label>Tail Exposure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phillines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Threat_and_Vulnerability_Management__c</fullName>
        <inlineHelpText>Anti-Virus / Malicious Software</inlineHelpText>
        <label>Threat and Vulnerability Management</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Triviality_Checks__c</fullName>
        <label>Triviality Checks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unlock__c</fullName>
        <inlineHelpText>By Self-Service /By Admin</inlineHelpText>
        <label>Unlock</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_of_normal_user_accounts__c</fullName>
        <inlineHelpText>Use of normal user accounts: log on and log off</inlineHelpText>
        <label>Use of normal user accounts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_of_privileged_accounts__c</fullName>
        <inlineHelpText>Use of privileged accounts, e.g. supervisor, root, administrator;
- log on and log off
- access to files and use of programs</inlineHelpText>
        <label>Use of privileged accounts</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>